[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenen/map/GridScene.gd" type="Script" id=1]
[ext_resource path="res://scenen/map/BlockLibrary.tres" type="MeshLibrary" id=2]

[node name="GridScene" type="Spatial"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.939693, -0.321394, 0.116978, 0, 0.34202, 0.939693, -0.34202, -0.883022, 0.321394, 0, 10, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 20, 10 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 1, 1, 1 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray( 0, 0, 1441792, 1, 0, 1441792, 2, 0, 1441792, 3, 0, 1441792, 4, 0, 1441792, 5, 0, 1441792, 65531, 0, 1441792, 65532, 0, 1441792, 65533, 0, 1441792, 65534, 0, 1441792, 65535, 0, 1441792, 0, 1, 1441792, 1, 1, 1441792, 2, 1, 1441792, 3, 1, 1441792, 4, 1, -1609170944, 5, 1, 1441792, 65531, 1, 538312704, 65532, 1, 1441792, 65533, 1, 1441792, 65534, 1, 1441792, 65535, 1, 1441792, 65536, 1, -1609170942, 65537, 1, 1441794, 65538, 1, 1075183618, 65539, 1, 1441794, 131068, 1, 1441794, 131069, 1, 1441794, 131070, 1, 1441794, 131071, 1, 1441794, 0, 2, 1441792, 1, 2, 1441792, 2, 2, 1441792, 3, 2, 1441792, 4, 2, 1612054528, 5, 2, 538312704, 65531, 2, 1441792, 65532, 2, 538312704, 65533, 2, 1441792, 65534, 2, 1441792, 65535, 2, -1072300032, 65536, 2, 1441793, 65537, 2, 1441793, 65538, 2, -535429118, 65539, 2, 1441794, 131067, 2, 1441794, 131068, 2, 1441794, 131069, 2, 538312706, 131070, 2, 1441793, 131071, 2, 1441794, 0, 3, 1441792, 1, 3, 1441792, 2, 3, 1612054528, 3, 3, 1441792, 4, 3, 1441792, 5, 3, 1441792, 65531, 3, -1609170944, 65532, 3, 1441792, 65533, 3, 1441792, 65534, 3, 1441792, 65535, 3, 1441792, 65536, 3, 538312705, 65537, 3, 1441793, 65538, 3, 1075183618, 65539, 3, 1441794, 131068, 3, -1609170942, 131069, 3, 1441794, 131070, 3, 1441793, 131071, 3, 1441793, 0, 4, 1441792, 1, 4, 1441792, 2, 4, 1441792, 3, 4, 538312704, 4, 4, 1441792, 5, 4, 1441792, 65531, 4, 1441792, 65532, 4, 1075183616, 65533, 4, 1441792, 65534, 4, 1441792, 65535, 4, 1441792, 65536, 4, 1441794, 65537, 4, 1441794, 65538, 4, 1441794, 65539, 4, 1441794, 131068, 4, -1609170939, 131069, 4, 1441794, 131070, 4, 1441794, 131071, 4, 1441793, 0, 5, 1441792, 1, 5, 1441792, 2, 5, 1441792, 3, 5, 1441792, 4, 5, -1609170944, 5, 5, -1609170944, 65531, 5, -1609170944, 65532, 5, 1441792, 65533, 5, 1441792, 65534, 5, 1441792, 65535, 5, 1441792, 65536, 5, 1441793, 65537, 5, 1441794, 65538, 5, -535429118, 65539, 5, -1609170942, 131068, 5, 1441797, 131069, 5, 1441794, 131070, 5, 1441794, 131071, 5, 1441794, 131072, 5, 3, 131073, 5, 3, 131074, 5, -1610612733, 131075, 5, 3, 196604, 5, -1610612733, 196605, 5, 3, 196606, 5, -1610612733, 196607, 5, 3, 0, 6, 1441792, 1, 6, 1441792, 2, 6, -1609170944, 3, 6, 1441792, 4, 6, 1441792, 5, 6, -1609170944, 65531, 6, 1441792, 65532, 6, -1609170944, 65533, 6, 1441792, 65534, 6, -1609170944, 65535, 6, 1441792, 65536, 6, 1441797, 65537, 6, 1441797, 65538, 6, 1441797, 65539, 6, 1441797, 131068, 6, 1441797, 131069, 6, 1441797, 131070, 6, 1441794, 131071, 6, 1441797, 0, 7, 1441792, 1, 7, 1612054528, 2, 7, 1441792, 3, 7, 1441792, 4, 7, 1441792, 5, 7, -1609170944, 65531, 7, -1609170944, 65532, 7, -1609170944, 65533, 7, -1609170944, 65534, 7, 538312704, 65535, 7, 1441792, 131069, 7, 1441797, 131070, 7, 1441797, 131071, 7, 1612054533, 0, 65528, 1441792, 1, 65528, -1609170944, 2, 65528, 1441792, 3, 65528, 1441792, 4, 65528, 1441792, 5, 65528, -1609170944, 65531, 65528, 1075183616, 65532, 65528, 538312704, 65533, 65528, 1441792, 65534, 65528, -1609170944, 65535, 65528, -1609170944, 0, 65529, -1609170944, 1, 65529, 1441792, 2, 65529, -1609170944, 3, 65529, -1609170944, 4, 65529, 1441792, 5, 65529, -1609170944, 65531, 65529, -1609170944, 65532, 65529, -1609170944, 65533, 65529, 1441792, 65534, 65529, 1441792, 65535, 65529, 1441792, 131067, 65529, -1609170941, 131068, 65529, 1441795, 131069, 65529, -1609170941, 131072, 65529, 1441796, 131073, 65529, 1441796, 131074, 65529, 1441796, 131075, 65529, 1441796, 131076, 65529, 1441796, 131077, 65529, 1441796, 196605, 65529, 1441796, 196606, 65529, -1609170940, 196607, 65529, 1441796, 0, 65530, 1441792, 1, 65530, -1609170944, 2, 65530, 1441792, 3, 65530, 1441792, 4, 65530, -1609170944, 5, 65530, 1441792, 65531, 65530, -1609170944, 65532, 65530, 1441792, 65533, 65530, 1612054528, 65534, 65530, -1609170944, 65535, 65530, -1609170944, 65538, 65530, 1441795, 131070, 65530, -1609170941, 131071, 65530, 1441795, 196603, 65530, 1441796, 196604, 65530, 1441796, 196605, 65530, 1441796, 0, 65531, 1441792, 1, 65531, 1441792, 2, 65531, 1441792, 3, 65531, 1441792, 4, 65531, 1441792, 5, 65531, 1441792, 65531, 65531, -1609170944, 65532, 65531, -1609170944, 65533, 65531, -1609170944, 65534, 65531, 1441792, 65535, 65531, 1441792, 65538, 65531, 1441795, 131070, 65531, -1609170941, 0, 65532, -1609170944, 1, 65532, 1441792, 2, 65532, 1441792, 3, 65532, -1609170944, 4, 65532, 1075183616, 5, 65532, 1441792, 65531, 65532, 1441792, 65532, 65532, 1441792, 65533, 65532, 538312704, 65534, 65532, 538312704, 65535, 65532, 1441792, 65537, 65532, 1441795, 65538, 65532, 1441795, 131068, 65532, 1441795, 131069, 65532, -1609170941, 0, 65533, 1441792, 1, 65533, 1441792, 2, 65533, 1441792, 3, 65533, 1441792, 4, 65533, 1441792, 5, 65533, 1441792, 65531, 65533, 1441792, 65532, 65533, 1612054528, 65533, 65533, 1441792, 65534, 65533, 1441792, 65535, 65533, 1441792, 65536, 65533, -1609170941, 65537, 65533, 1441795, 131068, 65533, 1441795, 131069, 65533, 1441795, 131070, 65533, 1441795, 131071, 65533, 1441795, 0, 65534, 1441792, 1, 65534, -1609170944, 2, 65534, 1612054528, 3, 65534, 1441792, 4, 65534, 1441792, 5, 65534, 1441792, 65531, 65534, 1441792, 65532, 65534, 1612054528, 65533, 65534, 1441792, 65534, 65534, 1441792, 65535, 65534, 1441792, 0, 65535, 1441792, 1, 65535, 1441792, 2, 65535, 1441792, 3, 65535, 1441792, 4, 65535, 1441792, 5, 65535, 1441792, 65531, 65535, 1441792, 65532, 65535, 1441792, 65533, 65535, -1609170944, 65534, 65535, -1609170944, 65535, 65535, 1441792 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="InformationGridMap" type="GridMap" parent="."]
visible = false
mesh_library = ExtResource( 2 )
cell_size = Vector3( 1, 1, 1 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="BlockRemoveTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="BlockRemoveTimer" to="." method="_on_BlockRemoveTimer_timeout"]
